--- a/MiBio-API/pom.xml
+++ b/MiBio-API/pom.xml
@@ -79,6 +79,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>edu.dal.mibio.corr</groupId>
+      <artifactId>mibio-corr</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.0-m01</version>
