--- a/MiBio-API/src/main/webapp/WEB-INF/web.xml
+++ b/MiBio-API/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     </servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>gtm.api</param-value>
+      <param-value>edu.dal.mibio.api</param-value>
     </init-param>
     <init-param>
       <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
